
2026-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/date_datetime/Datetime.h: Fractional seconds type
	switched to 'int' for consistency, print format string re-adjusted

2026-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/date_datetime/Datetime.h (format): Correct a
	format string reflecting 'unsigned int' rather than 'int'

2026-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/exceptions_impl.h: Combine previous and current
	methods enabling when 'execinfo.h' is found on selected platforms

2026-01-08  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.1.1

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem

2026-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/pdf/*: Rebuilt

	* vignettes/rmd/Rcpp.bib: Updates to several URLs
	* inst/bib/Rcpp.bib: Idem
	* vignettes/rmd/*: Idem
	* README.md: Idem

2026-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* vignettes/rmd/Rcpp.bib: Update package versions dates
	* inst/bib/Rcpp.bib: Idem

2026-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: No longer require RCPP_USING_UNWIND_PROTECT
	* inst/include/Rcpp/r/headers.h: Idem
	* inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem
	* inst/tinytest/cpp/stack.cpp: No longer test with RCPP_USING_UNWIND_PROTECT
	* inst/tinytest/test_interface.R: Idem

2026-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R: Additional or adjusted #nocov tags
	* R/Rcpp.package.skeleton.R: Idem
	* R/RcppLdpath.R: Idem
	* R/asis.R: Idem
	* R/inline.R: Idem
	* inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem
	* inst/include/Rcpp/internal/caster.h: Idem
	* inst/include/Rcpp/internal/export.h: Idem
	* inst/include/Rcpp/proxy/NamesProxy.h: Idem